- Fixed all FindBugs warnings and errors